--- a/Lab 3/styles.css
+++ b/Lab 3/styles.css
@@ -7,3 +7,25 @@
 .setMargins{
     margin:20px;
 }
+.marginRight{
+	margin-right: 50px;
+}
+
+.marginLeft{
+	margin-left: 100px;
+}
+
+input[type="radio"]{
+  margin: 0 5px 0 10px;
+}
+
+.receipt{
+    border-style: solid;
+    border-width: 5px;
+    text-align: center;
+    width: 50%;
+    margin-left: auto;
+    margin-right:auto;
+  
+
+}
